kubernetes/网络配置管理/yaml/svc-endpoint.yml
apiVersion: v1
kind: Service
metadata:
  name: ng-svc-endpoint   # 命名必须统一
  namespace: default
  labels:
    app: endpoint-ng
spec:
  type: ClusterIP
  ports:
  - port: 80
  clusterIP: None  #必须为None
---

apiVersion: v1
kind: Endpoints
metadata:
  name: ng-svc-endpoint
  namespace: default
  labels:
    app: endpoint-ng
subsets:
- addresses:
  - ip: 192.168.3.100
  ports:
  - port: 80
