kubernetes/网络配置管理/yaml/svc-extarnal.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-100
  namespace: default
spec:
  type: ExternalName
  externalName: www.daepay.com
