kubernetes/网络配置管理/yaml/traefik-mirror-apps.yml
apiVersion: v1
kind: Service
metadata:
  name: v1
spec:
  selector:
    app: v1
  ports:
  - port: 80
    targetPort: web1
    protocol: TCP
    name: web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v1
  labels:
    app: v1
spec:
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: v1
        image: nginx
        ports:
        - containerPort: 80
          name: web1

---
apiVersion: v1
kind: Service
metadata:
  name: v2
spec:
  selector:
    app: v2
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: web2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: v2
  labels:
    app: v2
spec:
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: v2
        image: nginx
        ports:
        - name: web2
          containerPort: 80
