kubernetes/网络配置管理/yaml/canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
spec:
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
      - name: canary
        image: cnych/echoserver
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: canary
spec:
  selector:
    app: canary
  ports:
  - port: 80
    targetPort: 8080
    name: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
    nginx.ingress.kubernetes.io/canary-by-header: canary
spec:
  rules:
  - host: echo.wwftst.com
    http:
      paths:
      - backend:
          serviceName: canary
          servicePort: 80
