kubernetes/网络配置管理/yaml/nginx-ingress-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-demo
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - name: ng-port
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ng-svc
  namespace: default
spec:
  selector:
    app: my-nginx
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ng-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ng.wwftst.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ng-svc
          servicePort: 80
