kubernetes/网络配置管理/yaml/production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
spec:
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      containers:
      - name: production
        image: cnych/echoserver
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: production
spec:
  selector:
    app: production
  ports:
  - port: 80
    targetPort: 8080
    name: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: echo.wwftst.com
    http:
      paths:
      - backend:
          serviceName: production
          servicePort: 80
