kubernetes/网络配置管理/yaml/todo-web-rewrite.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: web
        image: cnych/todo:v1.1
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: todo
  namespace: default
spec:
  selector:
    app: todo
  type: ClusterIP
  ports:
  - name: web
    port: 3000
    targetPort: 3000

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: todo.wwftst.com
    http:
      paths:
      - path: /app(/|$)(.*)
        backend:
          serviceName: todo
          servicePort: 3000
