kubernetes/网络配置管理/yaml/traefik-canary-wrr-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wrr-ingressroute
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`wrr.rapeseed-wang.cn`)
    kind: Rule
    services:
    - name: app-wrr
      kind: TraefikService
