kubernetes/网络配置管理/yaml/traefik-dashboard.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`traefik.rapeseed-wang.cn`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
