kubernetes/网络配置管理/yaml/traefik-mirror-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mirror-ingress-route
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`mirror.rapeseed-wang.cn`)
    kind: Rule
    services:
    - name: app-mirror
      kind: TraefikService
