kubernetes/网络配置管理/yaml/traefik-whoami.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
  - protocol: TCP
    name: web
    port: 80
  selector:
    app: whoami
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - name: web
          containerPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`who.rapeseed-wang.cn`)
    kind: Rule
    services:
    - name: whoami
      port: 80
